# MaizeDiseaseDetection

./: .env.example  .gitignore  app.py  db.json  info.txt  pyproject.toml  requirements.txt  s_train_plant_disease.ipynb  test.ipynb  test_maize.ipynb  train.ipynb  train_maize.ipynb  train_plant_disease.ipynb  training_history.json
