[tool.poetry]
name = "maizediseasedetection"
version = "0.1.0"
description = ""
authors = ["AntaresMugisho <antaresmugisho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
