[tool.poetry]
name = "maizediseasedetection"
version = "0.1.0"
description = ""
authors = ["AntaresMugisho <antaresmugisho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
tensorflow = "^2.17.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
